# camera_tests

./: CMakeLists.txt  DeviceInfoExample.cpp  GetParameters.cpp  QueryMasterSlave.cpp  SetDeviceMode.cpp  SyncCams.cpp  main.cpp  tester.py
include/: FrameSaver.hpp
python_helpers/: properties.txt  property_write_down.py
src/: FrameSaver.cpp
